# ps2-mouse

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
src/: lib.rs
