[package]
name = "ps2-mouse"
version = "0.1.1"
authors = ["Ryan Kennedy <rkennedy9064@gmail.com>"]
edition = "2018"
description = "This crate provides basic access to a ps2 mouse in x86 environments."
documentation = "https://docs.rs/ps2-mouse"
keywords = [
    "x86_64",
    "no_std",
]
categories = [
    "no-std",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-osdev/ps2-mouse"

[dependencies]
bitflags = "1.2.1"
x86_64 = "0.9.6"
